// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrayUtils getCopyOfArrayAndDeleteItem 1`] = `
Array [
  Object {
    "column1": 1,
    "column2": 31,
  },
  Object {
    "column1": 2,
    "column2": 32,
  },
  Object {
    "column1": 4,
    "column2": 34,
  },
]
`;

exports[`ArrayUtils getCopyOfArrayAndInsertOrReplaceItem insert 1`] = `
Array [
  Object {
    "column1": 1,
    "column2": 31,
  },
  Object {
    "column1": 2,
    "column2": 32,
  },
  Object {
    "column1": 4,
    "column2": 34,
  },
  Object {
    "column1": 3,
    "column2": 333,
  },
]
`;

exports[`ArrayUtils getCopyOfArrayAndInsertOrReplaceItem replace 1`] = `
Array [
  Object {
    "column1": 1,
    "column2": 31,
  },
  Object {
    "column1": 2,
    "column2": 32,
  },
  Object {
    "column1": 3,
    "column2": 333,
  },
  Object {
    "column1": 4,
    "column2": 34,
  },
]
`;
